[package]
name = "rom-builder"
version = "0.1.0"
edition = "2021"
description = "Desktop utility for building ZX Spectrum ROM images for programmable ICs."
license = "MIT"

[dependencies]
eframe = "0.27"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
